DC,Dileep | Fixing spacing, error message and other cosmetics

--- a/datawinners/media/javascript/data_tables/css/dwtable.css
+++ b/datawinners/media/javascript/data_tables/css/dwtable.css
@@ -1,3 +1,4 @@
+.dataTables_wrapper{ margin-top: 10px;}
 .dataTables_filter {
     float: right;
     padding-top:4px;
@@ -49,6 +50,7 @@
 }
 .table_wrapper{
     margin-bottom:8px;
+    padding-top:10px;
 }
 .dataTables_paginate{ float: left; padding-top:8px; padding-bottom: 3px;}
 ul.dropdown-menu>li.disabled a,ul.dropdown-menu>li.disabled label {
